# Arcade

./: .gitignore  CMakeLists.txt
doc/: doc.css  doc.html
include/: Error.hpp  GameManager.hpp  IGames.hpp  IGraphics.hpp  LibraryManager.hpp
lib/Games/menu/: menu.cpp  menu.hpp
lib/Games/nibbler/: map.txt  map2.txt  nibbler.cpp  nibbler.hpp
lib/Games/snake/: snake.cpp  snake.hpp
lib/Graphics/ncurses/: ncurses.cpp  ncurses.hpp
lib/Graphics/sdl/: sdl.cpp  sdl.hpp
lib/Graphics/sfml/: sfml.cpp  sfml.hpp
lib/allegro/: CMakeLists.txt  allegro.cpp  allegro.hpp
lib/ncurses/: CMakeLists.txt  ncurses.cpp  ncurses.hpp
lib/sdl/: CMakeLists.txt  sdl.cpp  sdl.hpp
src/: CMakeLists.txt  GameManager.cpp  LibraryManager.cpp  main.cpp
